# soccer-edge

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  RELEASE_NOTES.md  VERSION  pyproject.toml
docs/: api_guide.md  app_operation_guide.md  app_user_guide.md  bankroll_simulation_guide.md  calibration_guide.md  codex_task_brief.md  csv_field_mapping_templates.md  dashboard_guide.md  data_import_guide.md  deepseek_integration_guide.md  deepseek_optional_integration_note.md  deepseek_worldcup_last5_research.md  jc_edge_quick_start.md  llm_safety_guide.md  local_app_quickstart.md  observation_signal_guide.md  onboarding_guide.md  paper_operation_guide.md  phase2r_acceptance_checklist.md  phase2r_user_guide.md  probability_backtest_guide.md  qa_guide.md  real_data_rehearsal_guide.md  release_checklist.md  sample_workflow_guide.md  sporttery_usage_guide.md  user_app_guide.md  user_dataset_onboarding.md  worldcup_prediction_research.md
scripts/: README.md  launch_jc_edge_desktop.command
src/: __init__.py  application.py  version.py
tests/: test_ai_combo_cache_stability.py  test_ai_combo_timeout_retry.py  test_ai_hypothesis_review.py  test_api_analyze.py  test_api_backtest.py  test_api_calibration.py  test_api_deepseek_status.py  test_api_health.py  test_api_import_preview.py  test_api_view_models.py  test_app_user_errors.py  test_backtest_cli.py  test_backtest_engine.py  test_backtest_metrics.py  test_backtest_no_leakage.py  test_best_parlay_quality.py  test_best_parlay_scoring.py  test_calibration.py  test_calibration_persistence.py  test_cli_api_basics.py  (+135 more)
(+250 files in other folders)
